Edit Store name

--- a/demosystem.hisabkarlay.com/home.html
+++ b/demosystem.hisabkarlay.com/home.html
@@ -10,7 +10,7 @@
     <!-- CSRF Token -->
     <meta name="csrf-token" content="OHSDyHJxklO90PgIMaNnVq9rvjHnjqcffhGvHBIS">
 
-    <title>Home - GILL MOBILES &amp; PHOTOSTATE 16DB</title>
+    <title>Home -Aliyan Demo POS &amp; PHOTOSTATE 16DB</title>
 
     <link rel="stylesheet" href="https://demosystem.hisabkarlay.com/css/vendor.css?v=511">
 
