--- a/demosystem.hisabkarlay.com/home.html
+++ b/demosystem.hisabkarlay.com/home.html
@@ -100,7 +100,7 @@
         <header class="main-header no-print">
             <a href="https://demosystem.hisabkarlay.com/home" class="logo">
       
-      <span class="logo-lg">GILL MOBILES &amp; PHOTOSTATE 16DB <i class="fa fa-circle text-success" id="online_indicator"></i></span> 
+      <span class="logo-lg">Aliyan Demo POS &amp; PHOTOSTATE 16DB <i class="fa fa-circle text-success" id="online_indicator"></i></span> 
 
     </a>
 
@@ -226,14 +226,14 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="https://demosystem.hisabkarlay.com/uploads/media/1714476096_354260712_hisab%20karlay%20logo.jpeg" class="user-image" alt="User Image">
+                                <img src="#" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span>Aliyan Demo POS </span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
-                                    <img src="https://demosystem.hisabkarlay.com/uploads/business_logos/1715779337_logo.jpg" alt="Logo">
+                                    <img src="#" alt="Logo">
                                     <p>
                                         Aliyan Demo POS
                                     </p>
@@ -262,7 +262,7 @@
             <section class="sidebar">
 
                 <a href="https://demosystem.hisabkarlay.com/home" class="logo">
-		<span class="logo-lg">GILL MOBILES &amp; PHOTOSTATE 16DB</span>
+		<span class="logo-lg">Aliyan Demo POS &amp; PHOTOSTATE 16DB</span>
 	</a>
 
                 <!-- Sidebar Menu -->
